k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-base
  labels:
    app: dev-base
    environment: base
